# ProtAI

./: .gitignore  CLOUD_DEPLOYMENT.txt  README.md  pyproject.toml  start_server.bat  test_inference.py
backend/: app.py  requirements.txt
configs/: base.yaml  frame_zero_logk.yaml  headline.yaml  headline_logk.yaml  multitask_logk_energy.yaml  tiny.yaml
configs/arch_target_grid/: gnn_md_adaptability.yaml  gnn_md_binding_affinity.yaml  schnet_adaptability.yaml  schnet_binding_affinity.yaml
configs/frame_strategy/: attention_pool.yaml  frame_zero.yaml  random_frame.yaml
examples/: MDmodel.py
protai/: __init__.py  config.py
protai/api/: __init__.py  routes.py  service.py
protai/data/: __init__.py  dataset.py  graph.py  preshard.py  splits.py
protai/models/: __init__.py  gnn_md.py  heads.py  schnet.py
protai/tests/: test_smoke.py
protai/training/: __init__.py  eval.py  lit_module.py  train.py
scripts/: build_affinity_csv.py  build_logk_splits.py  build_random_splits.py  cloud_setup.sh  eval.py  generate_report_figures.py  preshard.py  synth_report_figures.py  train.py  verify_preshard.py
src/: convert_h5_to_amber_format.ipynb
src/data/components/: graph.py
